product code now uses SystemUtils to determine java version instead of system property tests now use junit5 EnabledForJreRange to determine java version instead of system property fixed some other tests that were broken in jdk17 by this change